--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -29791,6 +29791,15 @@ video {
   --tw-backdrop-sepia: sepia(100%);
 }
 
+@media (max-width: 640px) {
+}
+
+@media (max-width: 768px) {
+}
+
+@media (max-width: 1024px) {
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
@@ -175379,4 +175388,4 @@ video {
   .\32xl\:backdrop-sepia {
     --tw-backdrop-sepia: sepia(100%);
   }
-}
+};
